<resources>
    <string name="app_name">travel_scheduler</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_user">Not a user?</string>
    <string name="register"><u>Register</u></string>
    <string name="about_us"><u>About us !!!</u></string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_differently">Sign up with existing Google account</string>
    <string name="google">Google</string>
    <string name="explore_more"><u><b>Explore more</b></u></string>
    <string name="provided_by_firebase_cloud_auth_services">Provided by Firebase Cloud Auth Services</string>
    <string name="check_for_destinations">Check for destinations</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="saved_trips">Saved Trips</string>
    <string name="explore">Explore</string>
    <string name="destinations">Destinations</string>
    <string name="let_us_know">Let us know</string>
    <string name="where_are_you_travelling">Where are you travelling?</string>
    <string name="let_us_know_some_stuffs"><u>Let us know some stuffs</u></string>
    <string name="location">Location</string>
    <string name="what_are_you_interests">What are you interests?</string>
    <string name="interests">Interests</string>
    <string name="select_your_interests_below">Select your interests below</string>
    <string name="when_are_you_travelling">When are you travelling?</string>
    <string name="change_date">Change Date</string>
    <string name="set_date">Set Date</string>
    <string name="call_destination">Call Destination</string>
    <string name="name_your_trip">Name your trip</string>
    <string name="trip_name">Trip Name</string>
    <string-array name="interests_array">
        <item>Hiking</item>
        <item>Observatories</item>
        <item>Museums</item>
        <item>Water fronts</item>
        <item>Road trips</item>
        <item>Kids Activities</item>
        <item>Colleges and Universities</item>
        <item>Restaurants and Deli</item>
        <item>Landmarks and Historical Buildings</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_itinerary">View Itinerary</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="completed">Completed</string>
    <string name="favorites">Favorites</string>
    <string name="sign_out">Sign Out</string>
    <string name="explore_places_near_you">Explore Places near you</string>
    <string name="completed_trips">Completed Trips</string>
</resources>
